trying to fix research question spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -231,7 +231,7 @@ hr.hr1 { width: 200px; border-top: 1px solid #000; border-bottom: 1px solid #000
 Research Questions
 ========================================================================== */
 .question p { text-align: left; font-size: 14.5px; }
-.question { padding: 65px; background: #fff; }
+.question { padding: 65px; background: #fff; height:50%; }
 .question p { margin: 50px 0 0; }
 .question-services { position: relative; background: #fff; }
 .question-img { margin-top: 90px; margin-left: 0px; width: 60%; background: #fff; float: left; height: 100%; /* box-shadow: inset -15px -11px 40px -6px rgba(0, 0, 0, 0.1); -moz-box-shadow: inset -15px -11px 40px -6px rgba(0, 0, 0, 0.1); -webkit-box-shadow: inset -15px -11px 40px -6px rgba(0, 0, 0, 0.1); z-index: 1; */ }
